			   XPCE ChangeLog
			   ==============


* FIXED: Encoding issue with pce_open/3 on stream objects (crashes
  XPCE httpd).  Anjo Anjewierden.

VERSION 6.5.37, distributed with SWI-Prolog 5.5.37
==================================================

* FIXED: Bug#117: new(X, 9).  Dmitry.

* FIXED: Bug#108: Unicode support in the classes type, class and method
  to allow for unicode names in programming.  New code also fixes
  potential buffer overruns caused by invalid programs.  Dmitry.

* FIXED: Bug in class name that can cause identity problems with names
  that have used wide-character representations as intermediate.

* FIXED: Bug#111: @pce->write and friends to deal with Unicode arguments.
  Dmitry.

VERSION 6.5.36, distributed with SWI-Prolog 5.5.36
==================================================

* FIXED: Various 64-bit compiler warnings.  One of them caused
  `graphical->layout' to do the layout in the area (0,0,0,0).
  Another causes a crash in class spatial.  Anders Bouwer.

VERSION 6.5.35, distributed with SWI-Prolog 5.5.35
==================================================

* ADDED: display_manager<-window_of_last_event

VERSION 6.5.34, distributed with SWI-Prolog 5.5.34
==================================================

* PORT: Cleanup for GCC 4.0

* ADDED: Start of interface to add classes from C at runtime.

VERSION 6.5.33, distributed with SWI-Prolog 5.5.33
==================================================

* FIXED: Win32: display<-win_file_name: honour default directory.
  Jelmer Jellema.

* ADDED: head/body argument do `_draw_post_script'.  Jelmer Jellema.

* ADDED: library(swi/pce_debug_monitor).

* FIXED: avoid warning on M-q in Prolog mode (->indent_clause).

VERSION 6.5.31, distributed with SWI-Prolog 5.5.31
==================================================

VERSION 6.5.30, distributed with SWI-Prolog 5.5.30
==================================================

* ADDED: library(print_graphics), method ->save_postscript
