@@ -556,7 +556,7 @@ dndEventFrame(FrameObj fr, XEvent *xevent)
 		      start = s;
 		      while(s<e && !(*s == '\r' || *s == '\n'))
 			s++;
-		      str_inithdr(&str, ENC_ISOL1);
+		      str_inithdr(&str, FALSE);
 
 		      if ( e-start > 5 && strncmp(start, "file:", 5) == 0 )
 			start += 5;
